@@ -5,6 +5,9 @@ crudini NEWS                                    -*- outline -*-
   Support BOM correctly.  Previously we would have stripped any
   Byte Order Mark, and incorrectly matched items on the first line.
 
+  Extraneous blank lines are avoided when deleting a section.
+  Previously blank lines preceeding a [section] were not removed.
+
 
 * Noteworthy changes in release 0.9.5 (2023-10-04)
 
